Fixed position absolute covering most of screen in controlbar

--- a/src/components/custom_components/control_bar/controlbar.css
+++ b/src/components/custom_components/control_bar/controlbar.css
@@ -1,22 +1,6 @@
-.control_menu__wrapper {
+.control_menu {
     position: absolute;
     top: 0.7em;
-    right: 0.7em;
-    left: 0.7em;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
-}
-
-.control_menu__wrapper.one {
-    justify-content: flex-start;
-}
-
-.control_menu__wrapper.two {
-    justify-content: flex-end;
-}
-
-.control_menu {
     padding: 0.7em;
     border-radius: 20px;
     box-shadow: 0 0 2em rgba(0, 0, 0, 0.4);
@@ -27,8 +11,12 @@
     transform: translateY(0%);
 }
 
-.control_menu.collapsed {
-    transform: translateY(-80%);
+.control_menu.one {
+    left: 0.7em;
+}
+
+.control_menu.two {
+    right: 0.7em;
 }
 
 .control_menu_item__wrapper:not(.expand_less__wrapper) {
